--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Classify IA</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
-    <meta name="theme-color" content="#f59e0b" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <script
       type="module"
@@ -32,8 +28,9 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <link rel="manifest" href="/Classify/manifest.json" />
-    <meta name="theme-color" content="#000000" />
+    <link rel="manifest" href="/manifest.json">
+ <meta name="theme-color" content="#f59e0b" />
+ 
     <link
       rel="shortcut icon"
       href="img/favicon_io_sem fundo/favicon.ico"
